# CLtracEr

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  randomtest.c  raytracer.c  test.ppm  test1.ppm  test2.ppm  test3.ppm  vector_visual.py
OpenCL/: kernel.cl  main.c
cltesting/: blocking.cl  bubble_sort_kernel.cl  host.c  host2.c  square_kernel.cl  test.c  vector_add_kernel.cl
src/: raytracer.c
src/OpenCL/: kernel.cl  main.c  vec3.c
testing/: glfw_test.c  halton.c  rt2.c  test.c  vector_visual.py
testing/OpenCL/: gputracer.c  kernel.cl  main.c  test.c
testing/cltesting/: host.c  sort_test.c  square_kernel.cl
